--- a/root/home.html
+++ b/root/home.html
@@ -250,6 +250,7 @@
     <script src="scripts/instance-objects/graph-output.js"></script>
     <script src="scripts/instance-objects/draw-commands/grid-drawer.js"></script>
     <script src="scripts/instance-objects/draw-commands/function-drawer.js"></script>
+    <script src="scripts/instance-objects/draw-commands/number-drawer.js"></script>
     <script src="scripts/page-logic/home.js"></script>
 </body>
 </html>
