--- a/root/images/svg-source/icons-inline-svg.html
+++ b/root/images/svg-source/icons-inline-svg.html
@@ -76,3 +76,44 @@
     <path d="m41 12s-2 0-2 2v16c0 2 2 2 2 2h16s2 0 2-2v-16c0-2-2-2-2-2zm8 2 2 2v-1h2v3l4 4h-3v8h-5v-5h-3v5h-2v-8h-3z" style="fill-rule:evenodd"/>
 </svg>
 /*TEMPLATE_END*/
+
+/*TEMPLATE_BEGIN(formulas-icon)*/
+<svg viewBox="0 0 64 64">
+    <path d="m60 56v-14" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m2 47v14h6c4 0 8-5 14-5s6 6 6 6h8s0-6 6-6 10 5 14 5h6v-14" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m2 61 2-5h4c4 0 4-5 14-5s10 11 10 11" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m2 47 2-5h4c4 0 4-5 14-5s10 11 10 11" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m32 48v14" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m62 61-2-5h-4c-4 0-4-5-14-5s-10 11-10 11" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m62 47-2-5h-4c-4 0-4-5-14-5s-10 11-10 11" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m4 56v-14" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m18 46 4-2-1-13 6-1 1-6-8 1v-5s-0.16228-4 3-4c4 0 4 3 4 3l9-1s1-10-13-10c-16 0-12 13-12 13l2 5-7 1 3 6 5-1z" style="fill-rule:evenodd"/>
+    <path d="m6 26 22-3-3-2-17 3z" style="fill-rule:evenodd"/>
+    <path d="m34 10s-4-4-12-4c-7 0-11 6-11 6s1-9 11-9c11 0 12 7 12 7z" style="fill-rule:evenodd"/>
+    <path d="m36 44-2-1s-3-4-3-9 2-9 2-9l4 1s-3 4-3 9c0 3 2 9 2 9z" style="fill-rule:evenodd"/>
+    <path d="m51 48 2 1s5-3.901 5-9v-9l-4-1s1 7 1 10c0 3.1623-4 8-4 8z" style="fill-rule:evenodd"/>
+    <path d="m38 44 3 1 12-15-7-2z" style="fill-rule:evenodd"/>
+    <path d="m47 46 3 1-8-18-5-1z" style="fill-rule:evenodd"/>
+    <path d="m38 27 5 1 2 5 2-1-1-6-5-1z" style="fill-rule:evenodd"/>
+    <path d="m54 29-7-2 2-2 6 1z" style="fill-rule:evenodd"/>
+    <path d="m50 46-5-11 2-1 4 10z" style="fill-rule:evenodd"/>
+    <path d="m34 24 4 1 2-2-4-1z" style="fill-rule:evenodd"/>
+    <path d="m36 43s-1-3-1-8 3-9 3-9l2-2s-4 5-4 12c0 4 1 6 1 6z" style="fill-rule:evenodd"/>
+    <path d="m55 29 2-2 3 1-2 2z" style="fill-rule:evenodd"/>
+    <path d="m59 31 1-1s1 12-3 15c3-4 2-14 2-14z" style="fill-rule:evenodd"/>
+</svg>
+/*TEMPLATE_END*/
+
+/*TEMPLATE_BEGIN(settings-icon)*/
+<svg viewBox="0 0 64 64">
+    <path d="m42 26-2 8-7-4-3 3 4 7-8 2v4l8 2-4 7 3 3 7-4 2 8h4l2-8 7 4 3-3-4-7 8-2v-4l-8-2 4-7-3-3-7 4-2-8zm0 12h4l4 4v4l-4 4h-4l-4-4v-4z" style="fill-rule:evenodd"/>
+    <path d="m3 38v-14l16 8 30-15v14l-30 15z" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m49 16-30 15-16-8v-2h6l4 2 6 6v2" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m19 29 30-15" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m3 21 30-15h6l4 2 6 6v2" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m9 21 30-15" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m13 23 30-15" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m19 46v-14" style="fill:none;stroke-width:1px;stroke:#000"/>
+    <path d="m15 20 2-8 18-9 2 6" style="fill:none;stroke-width:1px;stroke:#000"/>
+</svg>
+/*TEMPLATE_END*/
