Abstracted drawer class
Eliminated some of the pain associated with passing the GraphOutput through functions constantly. All drawers now inherit from Drawer which holds references to the GraphOutput components.

--- a/root/numerical-analysis/lagrange-polynomial.html
+++ b/root/numerical-analysis/lagrange-polynomial.html
@@ -112,6 +112,7 @@
     <script src="/scripts/instance-objects/on-off-icon.js"></script>
     <script src="/scripts/instance-objects/scaling-canvas.js"></script>
     <script src="/scripts/instance-objects/graph-output.js"></script>
+    <script src="/scripts/instance-objects/draw-commands/drawer.js"></script>
     <script src="/scripts/instance-objects/draw-commands/grid-drawer.js"></script>
     <script src="/scripts/instance-objects/draw-commands/function-drawer.js"></script>
     <script src="/scripts/instance-objects/draw-commands/dot-drawer.js"></script>
