--- a/root/home.html
+++ b/root/home.html
@@ -248,6 +248,7 @@
     </main>
     <script src="scripts/instance-objects/scaling-canvas.js"></script>
     <script src="scripts/instance-objects/graph-output.js"></script>
+    <script src="scripts/instance-objects/draw-commands/drawer.js"></script>
     <script src="scripts/instance-objects/draw-commands/grid-drawer.js"></script>
     <script src="scripts/instance-objects/draw-commands/function-drawer.js"></script>
     <script src="scripts/instance-objects/draw-commands/number-drawer.js"></script>
